# dilemma-game

./: README.md  evaluation.py  game.py  game2.py  graphic_generation.py  pyproject.toml  run_simulation_and_analysis.py  simulation_game.py
agents/: prisoners_dilema_game_with_n_people.py
players/: Dockerfile  client.py  game.py  game_enums.py  main.py  players_start.sh  server.py
